# EmbeddedSystems_OnlineDiploma

./: .clang-format  .gitignore
Unit3/: PlatformTypes_OmarMasri.h  Readme.txt
Unit3/STM32cube/Debug/: FirstCubePrj.elf  FirstCubePrj.list  FirstCubePrj.map
Unit3/STM32cube/Release/: FirstCubePrj.elf  FirstCubePrj.hex  FirstCubePrj.list  FirstCubePrj.map  makefile
Unit3/STM32cube/Release/Src/: main.su  subdir.mk
Unit3/lab 2/: MapFile.map  cortexM3.elf
Unit3/lab1/: Makefile  Masri.elf  README  app.c  app.s  instr.s  learn-in-depth.elf  linkerscript.ld  objcopyhelp.txt  objdumphelp.txt  readelf.txt  sectionheader.txt  startup.s  uart.c  uart.h
Unit3/lab2/: linkerscript.ld  main.c
Unit3/lab2_startup.c/: Makefile  MapFile.map  README  cortexM3.elf  linkerscript.ld  startup.c
Unit3/lab3/: LAB3cortexM4.elf  Makefile  MapFile.map  SymbolsLAB3.txt  linkerscript.ld  main.c  startup.c
Unit4/lesson1/: LinkedList  LinkedList.c  doxyfile  myDelStudent.c
Unit4/lesson1/Unit4_lesson1_FIFO/: .cproject  .project  FIFO.c  FIFO.h  main.c
Unit4/lesson1/Unit4_lesson1_LIFO/: .cproject  .project  LIFO.c  LIFO.h  main.c
Unit4/lesson2/: Makefile  build.sh  collision-avoidance.c  collision-avoidance.h  dc_motor.c  dc_motor.h  globals.h  main.c  state.c  state.h  statemachine.c  ultrasonic_sensor.c  ultrasonic_sensor.h
Unit4/lesson3/STM32F103C8-BluePill/: Doxyfile  Makefile  README  driver_PressureSensor.c  driver_PressureSensor.h  driver_provided.c  driver_provided.h  globals.h  main.c  mainAlg.c  mainAlg.h
Unit4/lesson3/STM32F103C8-BluePill/output/: AllHeaders_PressureAlarm  AssemblyInstructions_PressureAlarm  SymbolsTable_PressureAlarm
Unit5/: README
Unit5/Prj1/STM32F103C8-BluePill/: Makefile  driver_PressureSensor.h  globals.h  main.c  mainAlg.c  mainAlg.h  startup.s
Unit5/Prj1/STM32F103C8-BluePill/output/: AllHeaders_PressureAlarm  AssemblyInstructions_PressureAlarm  MapFile.map  SymbolsTable_PressureAlarm
Unit5/Prj2-Rust/student-management/: Cargo.toml
Unit5/Prj2-Rust/student-management/src/: main.rs
Unit5/Prj2-cpp/Development/: CMakeLists.txt  Makefile
Unit5/Prj2-cpp/Development/archive/: main.cpp  prj2_functions.cpp  prj2_util.cpp
Unit5/Prj2-cpp/Development/inc/: main.h  myFunctions.h  student.h
Unit5/Prj2-cpp/Development/src/: main.cpp  myFunctions.cpp  student.cpp
Unit5/Prj2/Development/: CMakeLists.txt  Makefile  README
Unit5/Prj2/Development/Src/: .fuse_hidden00000bed0000000d  .fuse_hidden00000de70000000f  .fuse_hidden00000e0800000010  .fuse_hidden00000e0900000011  .fuse_hidden00000e0a00000012  FIFO.c  FIFO.h  LinkedList.c  Makefile  build.sh  cpp-asm.asm  main.c  main.h  prj2_functions.c  prj2_functions.h  prj2_util.c  prj2_util.h  read_file.c  read_file.cpp  read_file.h  words_from_file.c
Unit5/Prj2/Development/Src/inc/: prj2_functions.h  prj2_util.h
Unit6/Les3/: README.md
Unit6/Les3/lab1/: CMakeLists.txt  Makefile  README  README.md
Unit6/Les3/lab1/src/: main.c  startup.s  unit6_les3_lab1.axf
Unit6/Les3/lab1/src/output/: AllHeaders_unit6_les3_lab1  AssemblyInstructions_unit6_les3_lab1  unit6_les3_lab1.axf
Unit6/Les3/lab2/: Makefile  README.md
Unit6/Les3/lab2/src/: Makefile  main.c  unit6_les3_lab1.axf
Unit6/Les3/lab2/src/output/: AllHeaders_unit6_les3_lab1  AssemblyInstructions_unit6_les3_lab1  MapFile.map  SymbolsTable_unit6_les3_lab1
Unit6/Les3/lab3/: README.md
Unit6/Les3/lab3/src/: linkerscript.ld  main.c
Unit6/Les3/lab3/src/output/: AllHeaders_unit6_les3_lab1  AssemblyInstructions_unit6_les3_lab1  MapFile.map  SymbolsTable_unit6_les3_lab1
Unit6/Les4/: README.md
Unit6/Les4-Assignment/: README.md  buildlog
Unit6/Les4-Assignment/XC8Application1/XC8Application1/: main.c
Unit6/Les4/STMCube/: .mxproject  les4.ioc
Unit6/Les4/archive/: startup.s
Unit6/Les4/src/: Makefile  main.c
Unit7/lab1/: CMakeLists.txt  README.md
Unit7/lab1/STMCube/Core/Src/: main.c
Unit7/lab1/archive/: linkerscript.ld
Unit7/lab1/src/: Makefile  main.c
Unit7/lab3/: .clang-format  CMakeLists.txt  Makefile  README.md  TC-arm.cmake
Unit7/lab3/src/: main.c  startup_stm32f103c6tx.s  stm32f103c6.c
Unit7/lab3/src/inc/: stm32f103c6.h  stm32f103c6_GPIO.h
Unit7/lab3/src/inc/drivers/: stm32f103c6.h
Unit7/lab4/: CMakeLists.txt  Makefile  README.md  temp.c
Unit7/lab4/src/: keypad.c  lcd.c  main.c  stm32f103c6.c
Unit7/lab4/src/inc/: keypad.h  lcd.h  stm32f103c6.h  stm32f103c6_EXTI.h
Unit7/section1/: Makefile  README.md  main.c
Unit7/section1/archive/: AllHeaders_unit7_les1_section1  AssemblyInstructions_unit7_les1_section1.asm  Makefile
Unit7/section1/task1/: main.c
Unit7/section1/task1/kahareb/: main.c
Unit7/section1/task2/: main.c
Unit7/section2/: CMakeLists.txt  Makefile  README.md  TC-avr.cmake  build.sh  temp.c
Unit7/section2/src/: keypad.c  lcd.c  main.c
Unit7/section2/src/inc/: generic.h  keypad.h  lcd.h
Unit7/section3/src/: keypad.c  lcd.c  main.c  stm32f103c6.c
Unit7/section3/src/inc/: generic.h  keypad.h  lcd.h  stm32f103c6.h  stm32f103c6_GPIO.h
Unit7/section4/: .ycm_extra_conf.py  CMakeLists.txt  README.md
Unit7/section4/src/: keypad.c  lcd.c  main.c
Unit7/section4/src/inc/: keypad.h  lcd.h
common-files/: Makefile
unit2/HW1/: EX1.txt  EX2.txt  EX3.txt  EX4.txt  EX5.txt  EX6.txt  EX7.txt
unit2/HW2/: EX1.txt  EX2.txt  EX3.txt  EX4.txt  EX5.txt  EX6.txt  EX7.txt  EX8.txt
unit2/HW4_Functions/: Ex1.txt  Ex2.txt  Ex3.txt  Ex4.txt
unit2/HW5_Structure/: Ex1.txt  Ex2.txt  Ex3.txt  Ex4.txt  Ex5.txt
unit2/HW_Array/: EX1.txt  EX2.txt  EX3.txt  EX4.txt  EX5.txt
unit2/HW_Strings/: Ex1.txt  Ex2.txt  Ex3.txt
